<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_wight"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/x100"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                style="@style/linStyle"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher" />

                <EditText
                    style="@style/editStyle"
                    android:hint="@string/aut2" />

            </LinearLayout>

            <LinearLayout
                style="@style/linStyle"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher" />

                <EditText
                    style="@style/editStyle"
                    android:hint="@string/aut3" />

            </LinearLayout>

            <LinearLayout
                style="@style/linStyle"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher" />

                <EditText
                    style="@style/editStyle"
                    android:hint="@string/aut4" />

            </LinearLayout>

            <LinearLayout
                style="@style/linStyle"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher" />

                <EditText
                    style="@style/editStyle"
                    android:hint="@string/aut5" />

            </LinearLayout>

            <LinearLayout
                style="@style/linStyle"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher" />

                <EditText
                    style="@style/editStyle"
                    android:hint="@string/aut6" />

            </LinearLayout>

            <TextView
                style="@style/textMin"
                android:layout_width="match_parent"
                android:padding="@dimen/x15"
                android:text="@string/aut7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:padding="@dimen/x15">

            <Button
                android:id="@+id/butAut"
                style="@style/butKuang"
                android:layout_margin="@dimen/x15"
                android:text="@string/tijiao" />

            <TextView
                android:id="@+id/tvAut"
                style="@style/textMain"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/x20"
                android:layout_marginTop="@dimen/x10"
                android:text="@string/aut8" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
