<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_wight"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/main_fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/main_ll_bottom"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x2"
        android:background="@color/view_color" />

    <LinearLayout
        android:id="@+id/main_ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x98"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/main_ll_1"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_iv_1"
                android:layout_width="@dimen/x44"
                android:layout_height="@dimen/x44"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/main_tv_1"
                style="@style/textMin"
                android:layout_marginTop="@dimen/x4"
                android:text="@string/home1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_ll_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_iv_2"
                android:layout_width="@dimen/x44"
                android:layout_height="@dimen/x44"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/main_tv_2"
                style="@style/textMin"
                android:layout_marginTop="@dimen/x4"
                android:text="@string/home2" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/main_ll_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_iv_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/x10"
                android:layout_marginTop="@dimen/x10"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_ll_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_iv_4"
                android:layout_width="@dimen/x44"
                android:layout_height="@dimen/x44"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/main_tv_4"
                style="@style/textMin"
                android:layout_marginTop="@dimen/x4"
                android:text="@string/home3" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_ll_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/main_rl_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/main_iv_5"
                    android:layout_width="@dimen/x44"
                    android:layout_height="@dimen/x44"
                    android:src="@mipmap/ic_launcher" />

                <ImageView
                    android:id="@+id/main_iv_red_dot"
                    android:layout_width="@dimen/x21"
                    android:layout_height="@dimen/x21"
                    android:layout_alignRight="@+id/main_iv_5"
                    android:layout_alignTop="@id/main_iv_5"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/main_tv_5"
                style="@style/textMin"
                android:layout_marginTop="@dimen/x4"
                android:text="@string/home4" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>